--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
   <%= @user.email %>
 </p>
 
+<% if false %>
 <p>
   <strong>Last post:</strong>
   <%= @lastpost.content %>
@@ -19,6 +20,7 @@
   <strong>First post:</strong>
   <%= @firstpost.content %>
 </p>
+<% end %>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
