Add links to all users and all microposts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= link_to 'All users', users_path %>&nbsp;&nbsp;<%= link_to 'All microposts', microposts_path %><br>
     <%= yield %>
   </body>
 </html>
