--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
   <body>
     <%= link_to 'All users', users_path %>&nbsp;&nbsp;<%= link_to 'All microposts', microposts_path %><br>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
